# dex_sugun_ws

./: .gitignore  README.md
install/: local_setup.sh  setup.sh
install/dex_bringup/share/dex_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/dex_bringup/share/dex_bringup/behavior_trees/: simple_navigate_to_pose.xml
install/dex_bringup/share/dex_bringup/cmake/: dex_bringupConfig-version.cmake  dex_bringupConfig.cmake
install/dex_bringup/share/dex_bringup/environment/: ament_prefix_path.dsv  path.dsv
install/dex_bringup/share/dex_bringup/launch/: bringup_launch.py  navigation_launch.py  tb3_simulation_launch.py
install/dex_bringup/share/dex_bringup/params/: dex_controller_params.yaml  nav2_params_without_controller.yaml
install/dex_controller/include/dex_controller/: dex_controller.hpp
install/dex_controller/share/dex_controller/: dex_controller.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/dex_controller/share/dex_controller/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  dex_controllerConfig-version.cmake  dex_controllerConfig.cmake
install/dex_controller/share/dex_controller/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
log/: latest_build
src/dex_solution/: README.md
src/dex_solution/dex_bringup/: CMakeLists.txt  README.md
src/dex_solution/dex_bringup/behavior_trees/: simple_navigate_to_pose.xml
src/dex_solution/dex_bringup/launch/: bringup_launch.py  navigation_launch.py  tb3_simulation_launch.py
src/dex_solution/dex_bringup/params/: dex_controller_params.yaml  nav2_params_without_controller.yaml
src/dex_solution/dex_controller/: CMakeLists.txt  README.md  dex_controller.xml
src/dex_solution/dex_controller/include/dex_controller/: dex_controller.hpp
src/dex_solution/dex_controller/src/: dex_controller.cpp
(+5 files in other folders)
